--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item">
-                        <a href="https://cecilia845.github.io/ICT441/About us.html" class="nav-link">About us</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link">About us</a>
                      </li>
                      <li class="nav-item">
                         <a href="https://cecilia845.github.io/ICT441/Course detail.html" class="nav-link">Course detail</a>
@@ -86,7 +86,7 @@
                         <div class="slider-info text-left">
                            <h4>Dance For Satisfaction Of<br><span class="pink-col">Your Soul</span></h4>
                            <div class="outs_more-buttn">
-                              <a href="https://cecilia845.github.io/ICT441/About us.html">Read More</a>
+                              <a href="https://cecilia845.github.io/ICT441/About%20us.html">Read More</a>
                            </div>
                         </div>
                      </div>
@@ -147,7 +147,7 @@
                         <p>"Adhere to high-quality personnel training"</p>
                      </div>
                      <div class="outs-agile-buttn mt-lg-3 mt-2">
-                        <a href="https://cecilia845.github.io/ICT441/About us.html">Learn more</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html">Learn more</a>
                      </div>
                   </div>
                </div>
@@ -160,7 +160,7 @@
                         <p>"Adhere to high-level cultural pursuits"</p>
                      </div>
                      <div class="outs-agile-buttn mt-lg-3 mt-2">
-                        <a href="https://cecilia845.github.io/ICT441/About us.html">Learn more</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html">Learn more</a>
                      </div>
                   </div>
                </div>
@@ -173,7 +173,7 @@
                         <p>We will continue to promote high-quality education for all</p>
                      </div>
                      <div class="outs-agile-buttn mt-lg-3 mt-2">
-                        <a href="https://cecilia845.github.io/ICT441/About us.html">Learn more</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html">Learn more</a>
                      </div>
                   </div>
                </div>
@@ -460,7 +460,7 @@
                            <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                           <a href="https://cecilia845.github.io/ICT441/About us.html" class="nav-link ">About us</a>
+                           <a href="https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link ">About us</a>
                         </li>
                         <li class="nav-item">
                            <a href="https://cecilia845.github.io/ICT441/Course detail.html" class="nav-link">Course detail</a>
