--- a/Enquiry form.html
+++ b/Enquiry form.html
@@ -41,7 +41,7 @@
             <!--Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light">
                <div class="hedder-up">
-                  <h1><a class="navbar-brand" href="Home.html">Sway</a></h1>
+                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h1>
                </div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -49,20 +49,20 @@
                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                   <ul class="navbar-nav ">
                      <li class="nav-item ">
-                        <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item ">
-                        <a href="About us.html" class="nav-link">About us</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html.html" class="nav-link">About us</a>
                      </li>
                      <li class="nav-item ">
-                        <a href="Course detail.html" class="nav-link">Course detail</a>
+                        <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course detail</a>
                      </li>
                         <li class="nav-item">
-                           <a href="Enquiry form.html" class="nav-link">Enquiry form</a>
+                           <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
                         </li>
                      </li>
                      <li class="nav-item">
-                        <a href="Contact us.html" class="nav-link">Contact us</a>
+                        <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -84,7 +84,7 @@
          <div class="inner_breadcrumb  ml-4">
             <ul class="short_ls">
                <li>
-                  <a href="Home.html">Home</a>
+                  <a href="https://cecilia845.github.io/ICT441/Home.html">Home</a>
                   <span>/ /</span>
                </li>
                <li>Enquiry </li>
@@ -101,25 +101,25 @@
                <div class="typo-grids pt-md-5 pt-sm-4 pt-4">
                   <div class="sub-title">
                      <div class="sub-head mb-4">
-                        <h4>Alert</h4>
+                        <h4>Student world</h4>
                      </div>
                      <div class="alert alert-primary" role="alert">
-                        This is a primary alert—check it out!
+                        Student organization
                      </div>
                      <div class="alert alert-secondary" role="alert">
-                        This is a secondary alert—check it out!
+                       Student association
                      </div>
                      <div class="alert alert-success" role="alert">
-                        This is a success alert—check it out!
+                        Student journal
                      </div>
                      <div class="alert alert-danger" role="alert">
-                        This is a danger alert—check it out!
+                        Student activity
                      </div>
                      <div class="alert alert-warning" role="alert">
-                        This is a warning alert—check it out!
+                        Student Star
                      </div>
                      <div class="alert alert-info" role="alert">
-                        This is a info alert—check it out!
+                        Student works
                      </div>
                   </div>
                </div>
@@ -148,7 +148,7 @@
                               <tr>
                                  <th scope="row">2021</th>
                                  <td>100%</td>
-                                 <td>98$</td>
+                                 <td>98%</td>
                                  <td>96%</td>
                               </tr>
                               <tr>
@@ -175,7 +175,7 @@
          <div class="container py-lg-5 py-md-5 py-sm-4 py-3">
             <div class="row ">
                <div class="dance-agile-info col-lg-3 col-md-3 col-sm-6 ">
-                  <h4 class="pb-lg-3 pb-2"><a href="Home.html">Sway</a></h4>
+                  <h4 class="pb-lg-3 pb-2"><a href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h4>
                   <div class="bottom-para pb-3">
                      <p>ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla</p>
                   </div>
@@ -204,22 +204,19 @@
                   <nav class="border-line">
                      <ul class="nav flex-column">
                         <li class="nav-item active">
-                           <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                           <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                           <a href="About us.html" class="nav-link ">About us</a>
+                           <a href="https://cecilia845.github.io/ICT441/About%20us.html.html" class="nav-link ">About us</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Course detail.html" class="nav-link">Course detail</a>
+                           <a href="https://cecilia845.github.io/ICT441/Course%20detail.html.html" class="nav-link">Course detail</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Enquiry form.html" class="nav-link">Enquiry form</a>
+                           <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Contact us.html" class="nav-link">Contact us</a>
-                        </li>
-                        <li class="nav-item">
-                           <a href="contact.html" class="nav-link">Contact</a>
+                           <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                         </li>
                      </ul>
                   </nav>
@@ -271,9 +268,6 @@
             </div>
          </div>
          <div class="copy-agile-right text-center text-white py-2">
-            <p> 
-               © 2018 Sway. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
-            </p>
          </div>
       </footer>
       <!--//footer-->
