--- a/Course detail.html
+++ b/Course detail.html
@@ -45,7 +45,7 @@
             <!--Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light">
                <div class="hedder-up">
-                  <h1><a class="navbar-brand" href="Home.html">Sway</a></h1>
+                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h1>
                </div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -53,20 +53,20 @@
                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                   <ul class="navbar-nav ">
                      <li class="nav-item ">
-                        <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item">
-                        <a href="About us.html" class="nav-link">About us</a>
+                        <a href="https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link">About us</a>
                      </li>
                      <li class="nav-item active">
-                        <a href="Course detail.html" class="nav-link">Course us</a>
+                        <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course us</a>
                      </li>
                         <li class="nav-item">
-                           <a href="Enquiry form.html" class="nav-link">Enquiry form</a>
+                           <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
                         </li>
                      </li>
                      <li class="nav-item">
-                        <a href="contact us.html" class="nav-link">Contact us</a>
+                        <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -88,7 +88,7 @@
          <div class="inner_breadcrumb  ml-4">
             <ul class="short_ls">
                <li>
-                  <a href="Home.html">Home</a>
+                  <a href="https://cecilia845.github.io/ICT441/Home.html">Home</a>
                   <span>/ /</span>
                </li>
                <li>Course details</li>
@@ -229,7 +229,7 @@
          <div class="container py-lg-5 py-md-5 py-sm-4 py-3">
             <div class="row ">
                <div class="dance-agile-info col-lg-3 col-md-6 col-sm-6 ">
-                  <h4 class="pb-lg-3 pb-3"><a href="Home.html">Sway</a></h4>
+                  <h4 class="pb-lg-3 pb-3"><a href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h4>
                   <div class="bottom-para pb-sm-3 pb-2">
                      <p>ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla</p>
                   </div>
@@ -258,19 +258,19 @@
                   <nav class="border-line">
                      <ul class="nav flex-column">
                         <li class="nav-item active">
-                           <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+                           <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                           <a href="About us.html" class="nav-link ">About us</a>
+                           <a href="https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link ">About us</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Course detail.html" class="nav-link">Course detail</a>
+                           <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course detail</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Enquiry form.html" class="nav-link">Enquiry form</a>
+                           <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
                         </li>
                         <li class="nav-item">
-                           <a href="Contact us.html" class="nav-link">Contact us</a>
+                           <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                         </li>
                      </ul>
                   </nav>
@@ -286,7 +286,7 @@
                </div>
                   <div class="footer-post d-flex mb-2">
                      <div class="agileinfo_footer_grid1 mr-2">
-                        <a href="class.html">
+                        <a href="https://cecilia845.github.io/ICT441/Home.html">
                         <img src="images/f1.jpg" alt=" " class="img-fluid">
                         </a>
                      </div>
@@ -296,24 +296,24 @@
                         </a>
                      </div>
                      <div class="agileinfo_footer_grid1">
-                        <a href="class.html">
+                        <a href="https://cecilia845.github.io/ICT441/Home.html">
                         <img src="images/f3.jpg" alt=" " class="img-fluid">
                         </a>
                      </div>
                   </div>
                   <div class="footer-post d-flex">
                      <div class="agileinfo_footer_grid1 mr-2">
-                        <a href="class.html">
+                        <a href="https://cecilia845.github.io/ICT441/Home.html">
                         <img src="images/f4.jpg" alt=" " class="img-fluid">
                         </a>
                      </div>
                      <div class="agileinfo_footer_grid1 mr-2">
-                        <a href="class.html">
+                        <a href="https://cecilia845.github.io/ICT441/Home.html">
                         <img src="images/f5.jpg" alt=" " class="img-fluid">
                         </a>
                      </div>
                      <div class="agileinfo_footer_grid1">
-                        <a href="class.html">
+                        <a href="https://cecilia845.github.io/ICT441/Home.html">
                         <img src="images/f6.jpg" alt=" " class="img-fluid">
                         </a>
                      </div>
