--- a/Course detail.html
+++ b/Course detail.html
@@ -323,7 +323,10 @@
          </div>
          <div class="copy-agile-right text-center text-white py-2">
             <p> 
-               © 2018 Sway. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+              More course information is available here → <a href="https://atinstitute.edu.au/" target="_blank">Course information</a>
+            </p>
+            <p>
+               Fantasy Dance School
             </p>
          </div>
       </footer>
