--- a/About us.html
+++ b/About us.html
@@ -280,7 +280,7 @@
          </div>
          <div class="copy-agile-right text-center text-white py-2">
             <p> 
-               © 2018 Sway. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+               Fantasy Dance School
             </p>
          </div>
       </footer>
