--- a/Course detail.html
+++ b/Course detail.html
@@ -117,23 +117,23 @@
                            </thead>
                            <tbody>
                               <tr>
-                                 <th scope="row">Ballet</th>
+                                 <th scope="row">CUADAN102- Develop foundation ballet dance technique</th>
                                  <td>4</td>
                               </tr>
                               <tr>
-                                 <th scope="row">Jazz dance</th>
+                                 <th scope="row">CUADAN103- Develop foundation jazz dance technique</th>
                                  <td>5</td>
                               </tr>
                               <tr>
-                                 <th scope="row">Tap dancing</th>
+                                 <th scope="row">CUADAN104- Develop foundation tap dance technique</th>
                                  <td>4</td>
                               </tr>
                               <tr>
-                                 <th scope="row">Cultural dance</th>
+                                 <th scope="row">CUADAN105- Develop foundation modern dance technique</th>
                                  <td>5</td>
                               </tr>
                               <tr>
-                                 <th scope="row">Folk dance</th>
+                                 <th scope="row">CUADAN106- Develop foundation cultural dance technique</th>
                                  <td>3</td>
                               </tr>
                            </tbody>
