--- a/About us.html
+++ b/About us.html
@@ -41,7 +41,7 @@
             <!--Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light">
                <div class="hedder-up">
-                  <h1><a class="navbar-brand" href="https://github.com/Cecilia845/ICT441/Home.html">Sway</a></h1>
+                  <h1><a class="navbar-brand" href="https://github.com/Cecilia845/ICT441/Home.html">FDS</a></h1>
                </div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -100,7 +100,7 @@
                   <h4>Choose A Best For You <br>Which Is You Like</h4>
                </div>
                <div class="col-lg-6 col-md-6 abut-inner-left">
-                  <p>Our school is a dance school whose main goals are to cultivate high-quality dance talents, research high-level dance theories and create works.</p>
+                  <p>Fantasy Dance School is a dance school whose main goals are to cultivate high-quality dance talents, research high-level dance theories and create works.</p>
                </div>
             </div>
             <div class="row abt-inner-agile mt-lg-4 mt-3">
@@ -155,21 +155,21 @@
                   <div class="carousel-item active client-img">
                      <img class="img-fluid" src="images/t1.jpg" alt="">
                      <div class="client-matter py-lg-4 py-md-3 py-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,delectus reiciendis maiores alias consequatur aut.maiores alias</p>
+                        <p>You Don't stop Dancing From Growing Old, you Grow Old From Stopping To Dance.</p>
                         <h6 class="pt-lg-3 pt-2">Kelly West</h6>
                      </div>
                   </div>
                   <div class="carousel-item client-img">
                      <img class="img-fluid" src="images/t2.jpg" alt="">
                      <div class="client-matter py-lg-4 py-md-3 py-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,delectus reiciendis maiores alias consequatur aut.maiores alias</p>
+                        <p>Dancers are instruments,like a piano the choreographer plays.</p>
                         <h6 class="pt-lg-3 pt-2">Sunny Jack</h6>
                      </div>
                   </div>
                   <div class="carousel-item client-img">
                      <img class="img-fluid" src="images/t3.jpg" alt="">
                      <div class="client-matter py-lg-4 py-md-3 py-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,delectus reiciendis maiores alias consequatur aut.maiores alias</p>
+                        <p>Dance, it's where your keart is.</p>
                         <h6 class="pt-lg-3 pt-2">jolly Deo</h6>
                      </div>
                   </div>
