--- a/Enquiry form.html
+++ b/Enquiry form.html
@@ -41,7 +41,7 @@
             <!--Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light">
                <div class="hedder-up">
-                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h1>
+                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">FDS</a></h1>
                </div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
