--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
          <div class="header-bar">
             <nav class="navbar navbar-expand-lg navbar-light">
                <div class="hedder-up">
-                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">Sway</a></h1>
+                  <h1><a class="navbar-brand" href="https://cecilia845.github.io/ICT441/Home.html">FDS</a></h1>
                </div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -522,7 +522,7 @@
          </div>
          <div class="copy-agile-right text-center text-white py-2">
             <p> 
-               © 2018 Sway. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a>
+               Fantasy Dance School
             </p>
          </div>
       </footer>
