--- a/Course detail.html
+++ b/Course detail.html
@@ -59,7 +59,7 @@
                         <a href="https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link">About us</a>
                      </li>
                      <li class="nav-item active">
-                        <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course us</a>
+                        <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course detail</a>
                      </li>
                         <li class="nav-item">
                            <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
