--- a/Contact us.html
+++ b/Contact us.html
@@ -237,6 +237,9 @@
             </div>
          </div>
          <div class="copy-agile-right text-center text-white py-2">
+            <p>
+               Fantasy Dance School
+            </p>  
          </div>
       </footer>
       <!--//footer-->
