--- a/About us.html
+++ b/About us.html
@@ -61,7 +61,7 @@
                         <a href="https://github.com/Cecilia845/ICT441/Enquiry form.html" class="nav-link">Enquiry form</a>
                      </li>
                      <li class="nav-item">
-                        <a href="https://github.com/Cecilia845/ICT441/Contact us.html" class="nav-link">Contact us</a>
+                        <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -232,7 +232,7 @@
                            <a href="https://github.com/Cecilia845/ICT441/Enquiry form.html" class="nav-link">Enquiry form</a>
                         </li>
                         <li class="nav-item">
-                           <a href="https://github.com/Cecilia845/ICT441/Contact us.html" class="nav-link">Contact us</a>
+                           <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
                         </li>
                      </ul>
                   </nav>
