--- a/About us.html
+++ b/About us.html
@@ -49,16 +49,16 @@
                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                   <ul class="navbar-nav ">
                      <li class="nav-item ">
-                        <a class="nav-link" href="https://github.com/Cecilia845/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://cecilia845.github.io/ICT441/Home.html">Home <span class="sr-only">(current)</span></a>
                      </li>
                      <li class="nav-item active">
-                        <a href="https://github.com/Cecilia845/ICT441/About us.html" class="nav-link">About us</a>
+                        <a https://cecilia845.github.io/ICT441/About%20us.html" class="nav-link">About us</a>
                      </li>
                      <li class="nav-item ">
-                        <a href="https://github.com/Cecilia845/ICT441/Course detail.html" class="nav-link">Course detail</a>
+                        <a href="https://cecilia845.github.io/ICT441/Course%20detail.html" class="nav-link">Course detail</a>
                      </li>
                      <li class="nav-item">
-                        <a href="https://github.com/Cecilia845/ICT441/Enquiry form.html" class="nav-link">Enquiry form</a>
+                        <a href="https://cecilia845.github.io/ICT441/Enquiry%20form.html" class="nav-link">Enquiry form</a>
                      </li>
                      <li class="nav-item">
                         <a href="https://cecilia845.github.io/ICT441/Contact%20us.html" class="nav-link">Contact us</a>
