--- a/Enquiry form.html
+++ b/Enquiry form.html
@@ -92,6 +92,49 @@
          </div>
       </div>
       <!-- //short-->
+          <section id="trainers" class="trainers">
+
+      <div class="container" data-aos="fade-up">
+
+
+
+        <body style="text-align: center;">
+
+          <p>Name</p>
+
+          <form name ="test">
+
+          <input type ="text"name ="textie">
+
+          <p>Age</p>
+
+          <form name ="test">
+
+          <input type ="text"name ="textie">
+
+          <p>phone number</p>
+
+          <form name ="test">
+
+          <input type ="text"name ="textie">
+
+          <p>E-mail</p>
+
+          <form name ="test">
+
+          <input type ="text"name ="textie">
+
+          <p>Address</p>
+
+          <form name ="test">
+
+          <input type ="text"name ="textie">
+
+       </body>
+
+       <div class="text-center"><button type="submit">Submit</button></div>
+
+  </main><!-- End #main -->
       <!--Typography-->
       <section class="about-inner py-lg-4 py-md-3 py-sm-3 py-3">
          <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
