Enquiry form.html

--- a/Enquiry form.html
+++ b/Enquiry form.html
@@ -113,7 +113,7 @@
               }  
     
               // The gender must be male or female.  
-              if (gender != "Male" && gender != "Female") {  
+              if (gender != "male" && gender != "female") {  
                   alert("The gender must be male or female.");  
                   return false;  
               }  
